Refactorizar carga de configuración en la aplicación y en la evaluación

--- a/llm-evaluation/src/config/config.yml
+++ b/llm-evaluation/src/config/config.yml
@@ -3,7 +3,7 @@
 # Model Configuration
 models:
   evaluator:
-    provider: "vertex_ai"
+    provider: "vertex"
     parameters:
       model: "gemini-1.5-pro-002"
       temperature: 0
