--- a/llm-app/Dockerfile
+++ b/llm-app/Dockerfile
@@ -6,8 +6,8 @@ COPY ./requirements.txt /code/requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./src /code/app
+COPY ./src /code/src
 
 EXPOSE 8000
 
-CMD ["python", "app/app.py"]
+CMD ["python", "src/app.py"]
